--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ textarea {
   background-color: #06AED5;
   color: white;
 }
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
