--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,15 +37,15 @@ input {
 }
 .past {
   background-color: #d3d3d3;
-  color: white;
+  /* color: white; */
 }
 .present {
   background-color: #ff6961;
-  color: white;
+  /* color: white; */
 }
 .future {
   background-color: #77dd77;
-  color: white;
+  /* color: white; */
 }
 .saveBtn {
   border-left: 1px solid black;
