--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   line-height: 1;
 }
-input {
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -37,15 +37,12 @@ input {
 }
 .past {
   background-color: #d3d3d3;
-  /* color: white; */
 }
 .present {
   background-color: #ff6961;
-  /* color: white; */
 }
 .future {
   background-color: #77dd77;
-  /* color: white; */
 }
 .saveBtn {
   border-left: 1px solid black;
